--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-es6-categorised-notes",
-  "version": "0.1.0",
+  "name": "include-gallery",
+  "version": "2.0.0",
   "private": true,
   "devDependencies": {
     "autoprefixer": "6.4.1",
