--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "expr-eval": "^1.2.1",
     "flux": "^2.1.1",
     "foundation-sites": "^6.3.1",
     "gzip-size": "3.0.0",
