--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "devDependencies": {
     "autoprefixer": "6.4.1",
     "axios": "^0.15.3",
-    "babel-core": "6.14.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "6.1.2",
     "babel-jest": "15.0.0",
     "babel-loader": "6.2.5",
@@ -31,7 +31,7 @@
     "fs-extra": "0.30.0",
     "gzip-size": "3.0.0",
     "html-webpack-plugin": "2.22.0",
-    "http-proxy-middleware": "0.17.1",
+    "http-proxy-middleware": "^0.19.0",
     "jest": "15.1.1",
     "json-loader": "0.5.4",
     "moment": "^2.15.2",
@@ -53,13 +53,13 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
-    "expr-eval": "^1.2.1",
+    "expr-eval": "^1.2.2",
     "flux": "^2.1.1",
     "foundation-sites": "^6.3.1",
     "gzip-size": "3.0.0",
     "history": "^3.0.0",
-    "lodash": "^4.16.4",
-    "nodemon": "^1.10.2",
+    "lodash": "^4.17.11",
+    "nodemon": "^1.18.6",
     "path": "^0.12.7",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
